# car-bench-purple-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
amber/: amber-manifest-purple.json5
eval/: run_pass3_eval.py
scenarios/: scenario-leaderboard.toml  scenario.toml
src/: car_bench_agent.py  logging_utils.py  server.py  tool_call_types.py
