[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "car-bench-purple-agent"
version = "2.0.0"
description = "CAR-bench Purple Agent — single-pass, reasoning-model backed, policy-agnostic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.5",
    "httpx>=0.28.1",
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
